--- a/config.default.yaml
+++ b/config.default.yaml
@@ -1,18 +1,20 @@
 Proxy:
-  ServerHost: "127.0.0.1"      # Die IP-Adresse, auf der der Proxy-Server lauscht
-  ServerPort: 502              # Der Port, auf dem der Proxy-Server lauscht
-  AllowedIPs: []               # Liste der erlaubten IP-Adressen (leer = alle erlaubt)
-  MaxConnections: 100          # Maximale Anzahl gleichzeitiger Verbindungen
+  ServerHost: "0.0.0.0"
+  ServerPort: 5020
+  AllowedIPs:
+    - "192.168.1.10"
+    - "192.168.2.0/24"
+  MaxConnections: 50
 
 ModbusServer:
-  ModbusServerHost: "192.168.1.10"  # Die IP-Adresse des Modbus-Servers
-  ModbusServerPort: 502             # Der Port des Modbus-Servers
-  ConnectionTimeout: 10             # Timeout für die Modbus-Verbindung in Sekunden
-  DelayAfterConnection: 0.5         # Verzögerung nach erfolgreicher Verbindung in Sekunden
-  MaxRetries: 5                     # Maximale Anzahl von Verbindungsversuchen
-  MaxBackoff: 30.0                  # Maximale Wartezeit zwischen Verbindungsversuchen in Sekunden
+  ModbusServerHost: "192.168.1.100"
+  ModbusServerPort: 502
+  ConnectionTimeout: 10
+  DelayAfterConnection: 0.5
+  MaxRetries: 5
+  MaxBackoff: 30.0
 
 Logging:
-  Enable: true                     # Aktiviert die Protokollierung
-  LogFile: "modbus_proxy.log"      # Pfad zur Protokolldatei
-  LogLevel: "INFO"                 # Protokollierungsstufe (DEBUG, INFO, WARNING, ERROR, CRITICAL)
+  Enable: true
+  LogFile: "modbus_proxy.log"
+  LogLevel: "INFO"
